samples/_failures_safe/1761400984_a154a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6441f20c.c: In function ‘print_token’:
./samples/SAFE/__tmp_6441f20c.c:175:14: error: ‘TOKEN’ undeclared (first use in this function)
  175 |         case TOKEN
      |              ^~~~~
./samples/SAFE/__tmp_6441f20c.c:175:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6441f20c.c:175:9: error: expected ‘:’ or ‘...’ at end of input
  175 |         case TOKEN
      |         ^~~~
./samples/SAFE/__tmp_6441f20c.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6441f20c.c:175:9: error: expected declaration or statement at end of input
